--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  
+  "short_name": "TASK C",
+  "name": "TASK-C-Interactive-Form-Builder",
   "icons": [
     {
       "src": "favicon.ico",
